--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,27 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v5  # Mise à jour vers v3
+    - uses: actions/checkout@v3   # Version mise à jour
 
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v5  # Mise à jour vers v3
+    - name: Set up Python
+      uses: actions/setup-python@v4  # Version mise à jour
       with:
         python-version: '3.8'
+
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20.x'  # Spécifie explicitement l'utilisation de Node.js 20
 
     - name: Install dependencies
       run: |
