--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install fastapi uvicorn pandas joblib pydantic pytest scikit-learn
+        pip install fastapi uvicorn pandas joblib pydantic pytest scikit-learn mlflow
 
     - name: Verify database presence
       run: |
