--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,6 +39,7 @@ jobs:
       run: |
         pytest tests/test_main.py
         pytest tests/test_data_preparation.py
+        pytest tests/test_model.py
 
   deploy:
     needs: test
