--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install fastapi uvicorn pandas joblib pydantic scikit-learn mlflow
+        pip install -r requirements.txt
 
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
