--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,9 +37,7 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest tests/test_main.py
-        pytest tests/test_data_preparation.py
-        pytest tests/test_model.py
+        pytest tests --cov=./model --cov-report=term-missing --cov-fail-under=50
 
   deploy:
     needs: test
