--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --cov=data_preparation --cov=model --cov-report=term-missing --cov-fail-under=50
+addopts = --cov=./model --cov-report=term-missing --cov-fail-under=50
