--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,4 @@
 [pytest]
-addopts = --cov=./model --cov-report=term-missing --cov-fail-under=50
+addopts = --cov=./model --cov=./api --cov-config=.coveragerc --cov-report=term-missing --cov-fail-under=80
+
+
