--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,7 @@ jobs:
 
     - name: Run tests
       run: |
-        addopts = --cov=./model --cov=./api --cov-config=.coveragerc --cov-report=term-missing --cov-fail-under=80
+        pytest
 
   deploy:
     needs: test
